Adicionando Formulário Cancelar Tarefa

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 <body>
     <div class="container-principal">
+
         <header>
             <h1>ToDo List</h1>
         </header>
+
         <form id="todo-form">
             <p>Adicione a sua tarefa:</p>
             <div id="control-form">
@@ -26,6 +28,18 @@
                 </button>
             </div>
         </form>
+
+        <form id="edit-form">
+            <p>Edite sua tarefa:</p>
+            <div id="control-form">
+                <input type="text" id="edit-input">
+                <button type="submit">
+                    <i class="fa-solid fa-check-double"></i>
+                </button>
+            </div>
+            <form class="cancel-edit-btn">Cancelar</form>
+        </form>
+
     </div>
 </body>
 </html>
