Adicionando botão de filtrar e pesquisar no HTML

--- a/index.html
+++ b/index.html
@@ -39,7 +39,25 @@
             </div>
             <form class="cancel-edit-btn">Cancelar</form>
         </form>
-
+        <div id="toolbar">
+            <div id="search">
+                <h4>Pesquisar:</h4>
+                <form>
+                    <input type="text" id="search-input" placeholder="Buscar">
+                    <button id="erase-button">
+                        <i class="fa-solid fa-delete-left"></i>
+                    </button>
+                </form>
+            </div>
+            <div id="filter">
+                <h4>Filtrar</h4>
+                <select id="filter-select">
+                    <option value="all">Todos</option>
+                    <option value="done">Feitos</option>
+                    <option value="todo">A Fazer</option>
+                </select>
+            </div>
+        </div>
     </div>
 </body>
 </html>
