Adicionando o ToDo List

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>ToDo List</title>
 </head>
 <body>
+    
     <div class="container-principal">
 
         <header>
@@ -39,7 +40,9 @@
             </div>
             <form class="cancel-edit-btn">Cancelar</form>
         </form>
+
         <div id="toolbar">
+
             <div id="search">
                 <h4>Pesquisar:</h4>
                 <form>
@@ -49,6 +52,7 @@
                     </button>
                 </form>
             </div>
+
             <div id="filter">
                 <h4>Filtrar</h4>
                 <select id="filter-select">
@@ -58,6 +62,37 @@
                 </select>
             </div>
         </div>
+
+        <div id="todo-list">
+            <div class="todo">
+                <h3>Estou fazendo alguma coisa</h3>
+                <button class="finish-todo">
+                    <i class="fa-solid fa-check"></i>
+                </button>
+                <button class="edit-todo">
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+                <button class="remove-todo">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+            </div>
+        </div>
+
+        <div id="todo-list">
+            <div class="todo">
+                <h3>Estudar JavaScript</h3>
+                <button class="finish-todo">
+                    <i class="fa-solid fa-check"></i>
+                </button>
+                <button class="edit-todo">
+                    <i class="fa-solid fa-pen"></i>
+                </button>
+                <button class="remove-todo">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
