--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container-principal">
 
         <header>
-            <h1>ToDo List</h1>
+            <h1>Todo List</h1>
         </header>
 
         <form id="todo-form">
