Editando input e button das tarefas

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
 
         <form id="todo-form">
-            <p>Adicione a sua tarefa:</p>
+            <p>Adicione a sua tarefa</p>
             <div id="control-form">
                 <input type="text" id="todo-input" placeholder="O que você vai fazer?">
                 <button type="submit">
@@ -31,14 +31,14 @@
         </form>
 
         <form id="edit-form">
-            <p>Edite sua tarefa:</p>
+            <p>Edite sua tarefa</p>
             <div id="control-form">
                 <input type="text" id="edit-input">
                 <button type="submit">
                     <i class="fa-solid fa-check-double"></i>
                 </button>
             </div>
-            <form class="cancel-edit-btn">Cancelar</form>
+            <button id="cancel-edit-btn">Cancelar</button>
         </form>
 
         <div id="toolbar">
