--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div id="filter">
-                <h4>Filtrar</h4>
+                <h4>Filtrar:</h4>
                 <select id="filter-select">
                     <option value="all">Todos</option>
                     <option value="done">Feitos</option>
