--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </form>
 
-        <form id="edit-form">
+        <form class="hide" id="edit-form" >
             <p>Edite sua tarefa</p>
             <div id="control-form">
                 <input type="text" id="edit-input">
@@ -64,7 +64,7 @@
         </div>
 
         <div id="todo-list">
-            <div class="todo">
+            <div class="todo done">
                 <h3>Estou fazendo alguma coisa</h3>
                 <button class="finish-todo">
                     <i class="fa-solid fa-check"></i>
