--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </form>
 
-        <form class="hide" id="edit-form" >
+        <form id="edit-form" class="hide">
             <p>Edite sua tarefa</p>
             <div id="control-form">
                 <input type="text" id="edit-input">
