Adicionando evento no botão cancelar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Todo List</h1>
         </header>
 
-        <form id="todo-form">
+        <form id="todo-form" class="hide">
             <p>Adicione a sua tarefa</p>
             <div id="control-form">
                 <input type="text" id="todo-input" placeholder="O que você vai fazer?">
