--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>Todo List</h1>
         </header>
 
-        <form id="todo-form" class="hide">
+        <form id="todo-form">
             <p>Adicione a sua tarefa</p>
             <div id="control-form">
                 <input type="text" id="todo-input" placeholder="O que você vai fazer?">
@@ -30,7 +30,7 @@
             </div>
         </form>
 
-        <form id="edit-form" class="hide">
+        <form id="edit-form" class="esconde">
             <p>Edite sua tarefa</p>
             <div id="control-form">
                 <input type="text" id="edit-input">
