--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
 
         <div id="todo-list">
-            <div class="todo done">
+            <div class="todo">
                 <h3>Estou fazendo alguma coisa</h3>
                 <button class="finish-todo">
                     <i class="fa-solid fa-check"></i>
