--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         </div>
 
         <div id="todo-list">
-            <div class="todo">
+            <!-- Template -->
+            <!-- <div class="todo">
                 <h3>Estou fazendo alguma coisa</h3>
                 <button class="finish-todo">
                     <i class="fa-solid fa-check"></i>
@@ -76,32 +77,7 @@
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </div>
-
-            <div class="todo">
-                <h3>Estudar JavaScript</h3>
-                <button class="finish-todo">
-                    <i class="fa-solid fa-check"></i>
-                </button>
-                <button class="edit-todo">
-                    <i class="fa-solid fa-pen"></i>
-                </button>
-                <button class="remove-todo">
-                    <i class="fa-solid fa-xmark"></i>
-                </button>
-            </div>
-
-            <div class="todo">
-                <h3>Estudar Arrays</h3>
-                <button class="finish-todo">
-                    <i class="fa-solid fa-check"></i>
-                </button>
-                <button class="edit-todo">
-                    <i class="fa-solid fa-pen"></i>
-                </button>
-                <button class="remove-todo">
-                    <i class="fa-solid fa-xmark"></i>
-                </button>
-            </div>
+            </div> -->
         </div>
     </div>
 </body>
