--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
         <div id="todo-list">
             <!-- Template -->
-            <!-- <div class="todo">
-                <h3>Estou fazendo alguma coisa</h3>
+            <div class="todo">
+                <h3>Estudar JavaScript</h3>
                 <button class="finish-todo">
                     <i class="fa-solid fa-check"></i>
                 </button>
@@ -77,7 +77,7 @@
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </body>
